--- a/6. Neural Networks/SequenceModeling/Machine Translation with BiLSTM and Attention.ipynb
+++ b/6. Neural Networks/SequenceModeling/Machine Translation with BiLSTM and Attention.ipynb
@@ -189,8 +189,8 @@
    "outputs": [],
    "source": [
     "# let's download the Glove embeddings.\n",
-    "#!wget http://nlp.stanford.edu/data/glove.6B.zip\n",
-    "#!unzip -q glove.6B.zip"
+    "!wget http://nlp.stanford.edu/data/glove.6B.zip\n",
+    "!unzip -q glove.6B.zip"
    ]
   },
   {
@@ -680,7 +680,7 @@
   "kernelspec": {
    "display_name": "da5401",
    "language": "python",
-   "name": "da5401"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -692,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
